force-app/main/default/objects/Fornitori_Incaricati__c/Fornitori_Incaricati__c.object-meta.xml
<CustomObject>
    <label>Fornitore Incaricato</label>
    <nameField>
        <displayFormat>FI-{00000}</displayFormat>
        <label>Numero</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fornitori Incaricati</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>