force-app/main/default/objects/Fornitori_Incaricati__c/fields/Gestionale_Economico__c.field-meta.xml
<CustomField>
    <fullName>Gestionale_Economico__c</fullName>
    <label>Gestionale Economico</label>
    <referenceTo>Gestionale_Economico__c</referenceTo>
    <relationshipLabel>Fornitori Incaricati</relationshipLabel>
    <relationshipName>Fornitori_Incaricati</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>