force-app/main/default/objects/Fornitori_Incaricati__c/fields/Modalita_pagamento_fornitore__c.field-meta.xml
<CustomField>
    <fullName>Modalita_pagamento_fornitore__c</fullName>
    <label>Modalità pagamento fornitore</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Fattura senza IVA</fullName>
            </value>
            <value>
                <fullName>Fattura con IVA 10%</fullName>
            </value>
            <value>
                <fullName>Fattura con IVA 22%</fullName>
            </value>
            <value>
                <fullName>Prestazione Occasionale</fullName>
            </value>
            <value>
                <fullName>Fattura Estera</fullName>
            </value>
            <value>
                <fullName>Altro (Specificare)</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>