force-app/main/default/objects/Fornitori_Incaricati__c/fields/N_preventivo_fornitore_incaricato__c.field-meta.xml
<CustomField>
    <fullName>N_preventivo_fornitore_incaricato__c</fullName>
    <label>N° preventivo fornitore incaricato</label>
    <length>255</length>
    <type>Text</type>
</CustomField>