force-app/main/default/objects/Fornitori_Incaricati__c/fields/Nome_Fornitore__c.field-meta.xml
<CustomField>
    <fullName>Nome_Fornitore__c</fullName>
    <label>Nome Fornitore</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Fornitori</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Fornitori Incaricati</relationshipLabel>
    <relationshipName>Fornitori_Incaricati</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>