force-app/main/default/objects/Fornitori_Incaricati__c/fields/Pagamento_fornitore_Altro_specificare__c.field-meta.xml
<CustomField>
    <fullName>Pagamento_fornitore_Altro_specificare__c</fullName>
    <label>Pagamento fornitore - Altro specificare</label>
    <length>255</length>
    <type>Text</type>
</CustomField>