force-app/main/default/objects/Fornitori_Incaricati__c/fields/Prezzo_lordo_fornitore_incaricato__c.field-meta.xml
<CustomField>
    <fullName>Prezzo_lordo_fornitore_incaricato__c</fullName>
    <label>Prezzo lordo fornitore incaricato</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>