force-app/main/default/objects/Fornitori_Incaricati__c/validationRules/Pagamento_Fornitore_Specificare_Altro.validationRule-meta.xml
<ValidationRule>
    <fullName>Pagamento_Fornitore_Specificare_Altro</fullName>
    <active>false</active>
    <errorConditionFormula>AND (
ISPICKVAL ( Modalita_pagamento_fornitore__c , &apos;Altro (Specificare)&apos;),
  ISBLANK (Pagamento_fornitore_Altro_specificare__c)
)</errorConditionFormula>
    <errorDisplayField>Pagamento_fornitore_Altro_specificare__c</errorDisplayField>
    <errorMessage>Se si è scelto &quot;Altro&quot; come modalità di pagamento del fornitore, bisogna indicare la tipologia di pagamento</errorMessage>
</ValidationRule>